--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-logging.level.ru.yandex.practicum=debug
-logging.level.org.springframework.web.servlet.DispatcherServlet=debug
+logging.level.ru.yandex.practicum=trace
+logging.level.org.springframework.web.servlet.DispatcherServlet=trace
