--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>filmorate</name>
-	<description>A service that works with movies and user ratings, as well as returns the top 5 movies</description>
+	<description>A service that works with movies and user ratings, as well as returns the top movies</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -53,6 +53,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
 			<version>4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+			<version>2.7.4</version>
 		</dependency>
 	</dependencies>
 
