--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.9.0</version>
+			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -66,7 +66,12 @@
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 			<version>2.7.4</version>
 		</dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
